fixed JunitTest